<resources>
    <string name="app_name">Digital Leash</string>

    <string name="username">Username</string>
    <string name="radius">Radius</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="create">Create</string>
    <string name="check_status">Check Status</string>
    <string name="update">Update</string>
    <string name="username_hint">John Adams</string>
    <string name="radius_hint">2</string>
    <string name="uhoh">UH OH!</string>
    <string name="woohoo">WOO HOO!</string>
    <string name="unknown1">Your child is running wild.</string>
    <string name="unknown2">No idea where???</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
