<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geogehigbie.digitalleashparent.MainActivity"
    android:background="@drawable/leash_background">

            <LinearLayout
                android:id="@+id/linearUpper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/textColor"
                        android:textStyle="italic"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_marginBottom="@dimen/under_text_bottom_margin"/>

                    <EditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/textColor"
                        android:hint="@string/username_hint"
                        android:background="@drawable/edit_text_rounded"
                        android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                        android:paddingTop="@dimen/edit_text_paddingTop"
                        android:paddingRight="@dimen/edit_text_paddingRight"
                        android:paddingBottom="@dimen/edit_text_paddingBottom"
                        android:paddingLeft="@dimen/edit_text_paddingLeft"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/radius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radius"
                    android:textStyle="italic"
                    android:textColor="@color/textColor"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_marginBottom="@dimen/under_text_bottom_margin"/>

                <EditText
                    android:id="@+id/radiusEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/radius_hint"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor"
                    android:background="@drawable/edit_text_rounded"
                    android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                    android:paddingTop="@dimen/edit_text_paddingTop"
                    android:paddingRight="@dimen/edit_text_paddingRight"
                    android:paddingBottom="@dimen/edit_text_paddingBottom"
                    android:paddingLeft="@dimen/edit_text_paddingLeft"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearMiddle"
                android:layout_below="@+id/linearUpper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/linearLeft"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="30dp">

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"
                        android:textColor="@color/textColor"
                        android:textStyle="italic"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_marginBottom="@dimen/under_text_bottom_margin"/>

                    <EditText
                        android:id="@+id/longitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        android:background="@drawable/edit_text_rounded"
                        android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                        android:paddingTop="@dimen/edit_text_paddingTop"
                        android:paddingRight="@dimen/edit_text_paddingRight"
                        android:paddingBottom="@dimen/edit_text_paddingBottom"
                        android:paddingLeft="@dimen/edit_text_paddingLeft"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearRight"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"
                        android:textStyle="italic"
                        android:textColor="@color/textColor"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_marginBottom="@dimen/under_text_bottom_margin"/>

                    <EditText
                        android:id="@+id/latitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        android:background="@drawable/edit_text_rounded"
                        android:layout_marginBottom="@dimen/edit_text_bottom_margin"
                        android:paddingTop="@dimen/edit_text_paddingTop"
                        android:paddingRight="@dimen/edit_text_paddingRight"
                        android:paddingBottom="@dimen/edit_text_paddingBottom"
                        android:paddingLeft="@dimen/edit_text_paddingLeft"/>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLower"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearMiddle"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                >

                <Button
                    android:layout_weight="1"
                    android:id="@+id/buttonCreate"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/create"
                    android:textColor="@color/textColor"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="@drawable/button_rounded"
                    android:layout_marginRight="15dp"
                    android:onClick="onClickCreate"/>

                <Button
                    android:id="@+id/buttonCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/check_status"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/textColor"
                    android:background="@drawable/button_rounded"
                    android:layout_marginRight="15dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:onClick="onClickCheckStatus"/>

                <Button
                    android:id="@+id/buttonUpdate"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/update"
                    android:textColor="@color/textColor"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:background="@drawable/button_rounded"
                    android:onClick="onClickUpdate" />

            </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>
